namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
sdadasf asfasf asfas asfasd
  name: monitoring
