grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
name: init-grafana
        image: alpine:latest
        command: ['sh', '-c', 'chown -R 472:472 /var/lib/grafana']
        volumeMounts:
mountPath: /var/lib/grafana
          name: grafana-storage-pvc
  containers:
name: grafana
image: grafana/grafana:latest
ports:
name: grafana
containerPort: 3000
resources:
  limits:
    memory: "1Gi"
    cpu: "1000m"
  requests: 
    memory: 500M
    cpu: "500m"
volumeMounts:
mountPath: /var/lib/grafana
  name: grafana-storage-pvc
mountPath: /etc/grafana/provisioning/datasources
name: grafana-datasources
readOnly: false
volumes:
name: grafana-storage-pvc
persistentVolumeClaim:
  claimName: grafana-storage-pvc
name: grafana-datasources
configMap:
    defaultMode: 420
    name: grafana-datasources
